objects/Manager_Forecast__c.object
<CustomObject>
    <description>Store RSM forecast on the level of Forecast Definition items.</description>
    <fields>
        <fullName>AM_Forecast_USD__c</fullName>
        <label>AM Forecast USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billings_USD__c</fullName>
        <label>Billings USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_USD__c</fullName>
        <label>Bookings USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fiscal_Date__c</fullName>
        <description>defines which fiscal date we have for YOY reporting. USed to indetify the current fiscal month
DATE( VALUE(Fiscal_Year__c), Fiscal_Month__c, 01)</description>
        <formula>DATE( VALUE(Fiscal_Year__c), Fiscal_Month__c, 15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiscal_Month__c</fullName>
        <label>Fiscal Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_0_Months_Document__c</fullName>
        <label>Forecast 0 Months Document</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_2_Months_Document__c</fullName>
        <description>Stores forecast provided by RSM/GSM in 2 months ago for given fiscal month.</description>
        <label>Forecast 2 Months Document</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_3_Months_Document__c</fullName>
        <description>Stores forecast provided by RSM/GSM in 3 months ago for given fiscal month.</description>
        <label>Forecast 3 Months Document</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_Begin_of_Quarter_Document__c</fullName>
        <description>Store forecast of first Month of the Quarter</description>
        <label>Forecast Begin of Quarter Document</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Forecast Definition lookup</description>
        <label>Forecast Definition</label>
        <referenceTo>Forecast_Definition__c</referenceTo>
        <relationshipLabel>Manager Forecasts</relationshipLabel>
        <relationshipName>Manager_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Forecast_End_of_Previous_Quarter_Documen__c</fullName>
        <description>Stores forecast provided by RSM/GSM at the end of pre-vious quarter, e.g. if this record’s fiscal month is January, this keeps forecast value provided and entered end of December (as January is first month of new quarter). Similarly if this record’s fiscal month is February, this keeps still forecast entered end of December.</description>
        <label>Forecast End of Previous Quarter Documen</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_USD__c</fullName>
        <label>Forecast USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GSM_Name__c</fullName>
        <label>GSM Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Manager_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Frozen_Month_Date__c</fullName>
        <description>Freeze process will set last day of current fiscal month to indicate record is being locked until end of month. Freeze process will only update current month’s records.</description>
        <label>Last Frozen Month Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Month_Forecast_Document__c</fullName>
        <description>Stores forecast provided by RSM/GSM in previous month’s forecast cycle.</description>
        <label>Previous Month Forecast Document</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Manager Forecast</label>
    <nameField>
        <label>Manager Forecast Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Manager Forecasts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>